<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageViewResultEmoji"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/emoji_smile" />

    <TextView
        android:id="@+id/textViewCountRequiredAnswers"
        style="@style/TextViewResults"
        android:layout_width="294dp"
        android:layout_height="53dp"
        android:singleLine="false"
        android:text="@string/count_required_answers"
        app:layout_constraintBottom_toTopOf="@+id/textViewYourResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewResultEmoji" />

    <TextView
        android:id="@+id/textViewYourResult"
        style="@style/TextViewResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/your_result"
        app:layout_constraintBottom_toTopOf="@+id/textViewRequiredPercentRightAnswers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCountRequiredAnswers" />

    <TextView
        android:id="@+id/textViewRequiredPercentRightAnswers"
        style="@style/TextViewResults"
        android:layout_width="297dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:text="@string/required_percent_right_answers"
        app:layout_constraintBottom_toTopOf="@+id/textViewYourPercentResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewYourResult" />

    <TextView
        android:id="@+id/textViewYourPercentResult"
        style="@style/TextViewResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/your_percent_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRequiredPercentRightAnswers" />

    <Button
        android:id="@+id/buttonTryAgain"
        style="@style/ButtonLevelStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:text="@string/try_again_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>