<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:padding="6dp"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:00" />

    <TextView
        android:id="@+id/textViewSum"
        style="@style/QuestionTextStyle"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:background="@drawable/cyrcle_background"
        app:layout_constraintBottom_toTopOf="@+id/textViewMark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimer"
        tools:text="1" />

    <TextView
        android:id="@+id/textViewMark"
        style="@style/QuestionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#20BAAB"
        android:text="@string/mark"
        app:layout_constraintBottom_toTopOf="@+id/textViewVisibleNumber"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSum" />

    <TextView
        android:id="@+id/textViewVisibleNumber"
        style="@style/QuestionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#20BAAB"
        app:layout_constraintBottom_toTopOf="@+id/textViewRightAnswers"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/textViewQuestion"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMark"
        app:layout_constraintVertical_bias="0.5"
        tools:text="7" />

    <TextView
        android:id="@+id/textViewQuestion"
        style="@style/QuestionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#20BAAB"
        android:text="@string/question_mark"
        app:layout_constraintBottom_toBottomOf="@+id/textViewVisibleNumber"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewVisibleNumber"
        app:layout_constraintTop_toTopOf="@+id/textViewVisibleNumber" />

    <TextView
        android:id="@+id/textViewRightAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/count_right_answers"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVisibleNumber"
        app:layout_constraintVertical_bias="0.5" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="#13BD1A"
        android:max="100"
        android:padding="6dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewOption_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRightAnswers"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textViewOption_1"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="#4C810E"
        app:layout_constraintBottom_toTopOf="@+id/textViewOption_4"
        app:layout_constraintEnd_toStartOf="@+id/textViewOption_2"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="1" />

    <TextView
        android:id="@+id/textViewOption_2"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFC107"
        app:layout_constraintBottom_toTopOf="@+id/textViewOption_5"
        app:layout_constraintEnd_toStartOf="@+id/textViewOption_3"
        app:layout_constraintStart_toEndOf="@+id/textViewOption_1"
        tools:text="2" />

    <TextView
        android:id="@+id/textViewOption_3"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="#972469"
        app:layout_constraintBottom_toTopOf="@+id/textViewOption_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewOption_2"
        tools:text="3" />

    <TextView
        android:id="@+id/textViewOption_4"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewOption_5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="4" />

    <TextView
        android:id="@+id/textViewOption_5"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,"
        app:layout_constraintEnd_toStartOf="@+id/textViewOption_6"
        app:layout_constraintStart_toEndOf="@+id/textViewOption_4"
        tools:text="5" />

    <TextView
        android:id="@+id/textViewOption_6"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewOption_5"
        tools:text="6" />

    <TextView
        android:id="@+id/textViewBeginButton"
        style="@style/QuestionTextStyle"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/cyrcle_begin_button"
        android:text="@string/begin_button"
        android:textAllCaps="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>